[gd_scene load_steps=3 format=3 uid="uid://1yyqqrrwehj5"]

[ext_resource type="Theme" uid="uid://drnm5yyhxpjst" path="res://pause menu --- theme/pause_menu.tres" id="1_grdc7"]
[ext_resource type="Script" uid="uid://c2nvnijqx0ytm" path="res://scripts/pause_menu.gd" id="1_me6vf"]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_me6vf")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.49411765)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="resume_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_grdc7")
theme_override_font_sizes/font_size = 10
text = "RETURN"

[node name="quit_btn" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("1_grdc7")
theme_override_font_sizes/font_size = 10
text = "QUIT"

[connection signal="pressed" from="menu_holder/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="menu_holder/quit_btn" to="." method="_on_menu_btn_pressed"]
[connection signal="pressed" from="menu_holder/quit_btn" to="." method="_on_quit_btn_pressed"]
